--- a/scss/option.scss
+++ b/scss/option.scss
@@ -1,8 +1,27 @@
+$option-color : #ffcccc;
+@mixin transform($duration) {
+  -webkit-transform: translate3d($duration,0,0);
+  -moz-transform: translate3d($duration,0,0);
+  -ms-transform: translate3d($duration,0,0);
+   transform: translate3d($duration,0,0);
+}
+@mixin transition($transition) {
+  -webkit-transition:$transition;
+  -moz-transition:$transition;
+  -o-transition:$transition;
+  transition:$transition;
+}
 
+@mixin calc($property, $expression) {
+  #{$property}: -moz-calc(#{$expression});
+  #{$property}: -webkit-calc(#{$expression});
+  #{$property}: calc(#{$expression});
+}
 .list {
-  width: 80%;
-  margin: auto;
+  //margin: auto;
+  padding: 16px 35px;
   text-transform: capitalize;
+  min-width: 50px;
 
   .under {
     border-bottom: 1px solid black;
@@ -25,23 +44,75 @@
   .text-left {
     text-align: left;
   }
+  .optionItem {
+    padding: 16px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+  .food {
+    .itemName {
+      display: inline-block;
+      width: 100%;
+      @include calc( width, '100% - 75px')
+    }
+    .right {
+      float: right;
+      position: relative;
+      width: 65px;
+
+        .itemCount {
+          display: inline-block;
+          width: 100%;
+          height: 50px;
+          top: -3px;
+          //background: red;
+          position: absolute;
+
+            .countButton {
+              width: 25px;
+              height: 25px;
+              margin-left: 10px;
+              text-align: center;
+              border-radius: 50%;
+              background: $option-color;
+              @include transition(all linear 0.2s);
+              line-height: 1.5;
+            }
+
+            &.ng-hide {
+              //right: -100%;
+              @include transform(20px);
+              @include transition(all linear 0.2s);
+            }
+
+          }
+
+      }
+      &.shift {
+          .itemName {
+            @include calc( width, '100% - 100px')
+          }
+
+          div.hideit {
+            @include transform(-20px) ;
+            @include transition(all linear 0.2s);
+
+          }
+      }
+
+
+  }
 
   .left {
     float: left;
   }
-
-  .right {
-    float: right;
-  }
-
   .bold{
     font-weight: bold;
   }
 }
-
-.center {
-  margin: auto;
-}
+// .center {
+//   margin: auto;
+// }
 
 button.checkbutton {
   background: none;
@@ -52,4 +123,11 @@ button.checkbutton {
   color: red;
   margin: 5px 0;
   padding: 0 10px;
+}
+
+.menuHeader {
+  background: $option-color;
+  .center {
+    margin: auto;
+  }
 }
